--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ textarea:hover {
 .bg {
 	width: 1000px;
 	height: 200px;
-	background: url("http://i.imgur.com/NngTysY.jpg");
+	background: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-422955.png");
 	background-position: center center;
 	margin: 6px;
 	display: inline-block;
